Rename require statements for clarity

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,9 @@
 			</a>
 		</footer>
 
+		<script>
+			const Electron = require("electron");
+		</script>
 		<script src="Utilities.js"></script>
 		<script src="API.js"></script>
 		<script src="Preview.js"></script>
