Move settings checkboxes to button context menu

--- a/app/index.html
+++ b/app/index.html
@@ -9,19 +9,10 @@
 			<div class="preview-container"></div>
 		</main>
 		<footer>
-			<div class="api-options">
-				<label class="gifs">
-					<input type="checkbox" name="GIF" checked>
-					GIFs
-				</label>
-				<label class="stickers">
-					<input type="checkbox" name="Sticker" checked>
-					Stickers
-				</label>
-			</div>
 			<a class="attribution" href="https://giphy.com/" target="_blank" title="Giphy">
 				<img src="../assets/Giphy.png">
 			</a>
+			<button class="settings"></button>
 		</footer>
 
 		<script>
